# lambda-ext-rollcage

./: .gitignore  .releaserc.json  Cargo.toml  Makefile  README.md  devbox.json  package-lock.json  rust-toolchain.toml  send_error.js  test.js
.github/: dependabot.yml
.github/workflows/: format.yml  lint.yml  release.yml  test.yml
etc/: architecture.drawio  template.json
src/: buffer.rs  extension.rs  main.rs  reporter.rs  sink.rs
src/sinks/: kinesis.rs
