[package]
name = "rollcage"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda-extension = "0.12.1"
tokio = { version = "1.45", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.41"
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false  }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.41"
gethostname = "1.0.2"

[dev-dependencies]
wiremock = "0.6.3"

